src/styles/Dropdown.css
/* mobile dropdown container */
.dropdown {
    position: fixed;
    right: 0;
    top: -1em;
    padding-top: 1em;
    /* display: flex;
    justify-content: flex-end; */
    z-index: 1;
    overflow: hidden;
    max-height: 0;
    animation-duration: 3s;
    animation-fill-mode: forwards;
    transform-origin: top;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);   
}

/* dropdown content */
.dropdown-links {
    z-index: 1;
    list-style: none;
    display: flex;
    flex-direction: column;
    width: 100%;
    text-align: right;
    background-color: #FFFFFF;
    font-size: 1rem;
    line-height: 2.5rem;
    padding: 0;
    border-bottom-left-radius: 0.25rem;
    margin: 0; 
}

/* individual links */
.link-items {
    z-index: 1;
    display: inline-block;
    cursor: pointer;
    padding: 0 0.75rem;
}

.link-items:hover {
    background-color: #2A86E3;
    color: white;
    font-weight: bolder;
}

/* open/close animations */
@keyframes slideDown {
    from {
        transform: translateY(-8em);
        max-height: 0;
    }
    to {
        transform: translateY(0);
        max-height: 200px;
    }
}
@keyframes slideUp {
    from {
        transform: translateY(3em);
        max-height: 200px;
    }
    to {
        transform: translateY(-8em);
        max-height: 0;
    }
}

/* animation calls */
.dropdown.open-dropdown {
    display: block;
    animation-name: slideDown;
    margin-top: 4em;
}

.dropdown.close-dropdown {
    display: block;
    animation-name: slideUp;
    margin-top: 0;
}

